syntax = "proto3";
package capstone;
option go_package = "github.com/marcos-wz/capstone/proto/fruitpb";

import "github.com/marcos-wz/capstone/proto/filterpb/filter.proto";
import "github.com/marcos-wz/capstone/proto/loaderpb/loader.proto";
import "github.com/marcos-wz/capstone/proto/filterccpb/filtercc.proto";

service FruitService {
    rpc Filter(FilterRequest) returns (FilterResponse) {};
    rpc Loader(LoaderRequest) returns (LoaderResponse) {};
    rpc FilterCC(FilterCCRequest) returns (FilterCCResponse) {};
}